virtualservice/grafana.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
  - "grafana.bei.com"
  gateways:
  - devflow-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 3000
