virtualservice/minio.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-console
  namespace: istio-system
spec:
  hosts:
  - "minio-console.bei.com"
  gateways:
  - devflow-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: default-console.minio.svc.cluster.local
        port:
          number: 9443

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-console
  namespace: istio-system
spec:
  host: default-console.minio.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
