virtualservice/prometheus.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
  - "prometheus.bei.com"
  gateways:
  - devflow-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-k8s.monitoring.svc.cluster.local
        port:
          number: 9090
