virtualservice/route.yaml
# prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton
  namespace: tekton-pipelines  # 与 Prometheus 服务同命名空间（可选，也可在其他命名空间）
spec:
  parentRefs:
  - name: https  # 关联上一步创建的 Gateway
    namespace: istio-system  # Gateway 所在的命名空间
  hostnames:
  - "tekton-dashboard.bei.com"  # 外部访问的域名（需解析到集群节点 IP）
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /  # 匹配所有路径
    backendRefs:
    - name: tekton-dashboard   # Prometheus 服务名称
      namespace: tekton-pipelines  # 服务所在命名空间
      port: 9097  # 服务端口（与步骤 2 中一致）
