virtualservice/tekton-dashboard.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tekton-dashboard
  namespace: istio-system
spec:
  hosts:
  - "tekton-dashboard.bei.com"
  gateways:
  - devflow-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tekton-dashboard.tekton-pipelines.svc.cluster.local
        port:
          number: 9097
